# agentic-rag-qa

./: README.md
lakehouse-mlops-agentic-qa/: .dockerignore  .env.example  .gitignore  DEPLOY_AWS.md  Dockerfile  README.md  Untitled  pyproject.toml
lakehouse-mlops-agentic-qa/.github/workflows/: ci.yml
lakehouse-mlops-agentic-qa/configs/: pipeline.aws.yaml  pipeline.azure.yaml  pipeline.yaml
lakehouse-mlops-agentic-qa/data/raw/: evidently_monitoring.md  rag_overview.md  sample.md
lakehouse-mlops-agentic-qa/infra/: cloudformation.yaml  main.bicep  parameters.json
lakehouse-mlops-agentic-qa/notebooks/: databricks_pipeline.py  glue_pipeline.py
lakehouse-mlops-agentic-qa/src/lmq/: __init__.py  config.py
lakehouse-mlops-agentic-qa/src/lmq/agent/: __init__.py  run.py
lakehouse-mlops-agentic-qa/src/lmq/cli/: main.py
lakehouse-mlops-agentic-qa/src/lmq/cloud/: __init__.py  keyvault.py  mlflow_log.py  s3_storage.py  secrets_manager.py  storage.py
lakehouse-mlops-agentic-qa/src/lmq/eval/: __init__.py  metrics.py  regression.py
lakehouse-mlops-agentic-qa/src/lmq/monitoring/: __init__.py  evidently_reports.py
lakehouse-mlops-agentic-qa/src/lmq/pipeline/: __init__.py  bronze.py  duckdb_smoke.py  gold.py  manifest.py  run.py  silver.py
lakehouse-mlops-agentic-qa/src/lmq/promotion/: __init__.py  engine.py
lakehouse-mlops-agentic-qa/src/lmq/quality/: __init__.py  (+2 more)
lakehouse-mlops-agentic-qa/tests/: test_api.py  test_evidently.py  test_metrics.py  test_promotion.py  test_regression.py
lakehouse-mlops-agentic-qa/tests/golden/: qa_pairs.jsonl  qa_pairs_fail.jsonl
(+7 files in other folders)
