[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lmq"
version = "0.1.0"
description = "Local-first medallion pipeline with quality gates (MLOps QA MVP — M0–M2)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "duckdb>=1.0.0",
    "evidently>=0.4.0",
    "fastapi>=0.111.0",
    "polars>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
lmq = "lmq.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lmq"]

[tool.hatch.build.targets.sdist]
include = ["src/lmq", "README.md", "configs"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["lmq"]
